# AudioPlayground2

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/Audio/: Audio.cpp  Audio.hpp  DebugBuffer.hpp  Playground.cpp  Playground.hpp  Project.hpp  Synth.cpp  Synth.hpp
app/Audio/DSP/: Oscillator.cpp  Oscillator.hpp  Voice.hpp
app/Audio/Instruments/: NOscillator.cpp  NOscillator.hpp
app/src/: main.cpp
